# Aspire-AI

./: .env  .env.example  .gitignore  README.md  requirements.txt
src/: app.py
src/Data/: cleaned_Art & Design.json  cleaned_Marketing & Advertising.json  cleaned_Media and Entertainment.json  cleaned_Protective Services_New.json  cleaned_Tourism and Hospitality_New.json  cleaned_aerospace.json  cleaned_biotech.json  cleaned_finance.json  cleaned_healthcare.json  cleaned_law_judiciary.json  tech.json
src/RAG/: placeholder.txt
src/RAG /: README.md
src/RAG /src/roadmaps/: career_info.md  crew.py  main.py
src/RAG /src/roadmaps/config/: tasks.yaml
src/RAG/src/roadmaps/: career_info.md  crew.py  fetch_jobs_by_industry.py  main.py  pyproject.toml
src/RAG/src/roadmaps/config/: agents.yaml
src/RAG/src/roadmaps/tools/: rag_tool.py
src/aspire_ai/: career_info.md  chatbot.py  variables.py
src/aspire_ai/config/: config.json
src/aspire_ai/static/css/: style.css
src/aspire_ai/static/js/: form.js  industry-mapping.js
src/aspire_ai/templates/: chatbot.html  form.html  index.html  industry.html  landing.html  roadmap.html  success.html
