[project]
name = "roadmaps"
version = "0.1.0"
description = "roadmaps using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
roadmaps = "roadmaps.main:run"
run_crew = "roadmaps.main:run"
train = "roadmaps.main:train"
replay = "roadmaps.main:replay"
test = "roadmaps.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
